# Product-Categorization

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: __init__.py  main.py
data/present/modelling/v1/: dataset-metadata.json
data/present/modelling/v2/: dataset-metadata.json
data/scripts/: __init__.py  async-fatching.py  extract.py  load.py  transform.py
models/: dataset.py  main.py  modelling.py  utils.py
notebooks/: 1.0 Preprocessing.ipynb  2.0 Preparation.ipynb  2.1 Preparation.ipynb  2.2 Preparation.ipynb  3.0 slicing-dataset.ipynb  4.0 Put-All-Together.ipynb
