[tool.poetry]
name = "Project Name"
version = "0.1.0"
description = "Project Description"
authors = ["Authors Names"]

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^1"
jupyterlab = "^4.1.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
seaborn = "^0.13.2"
apiclient = "^1.0.4"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.122.0"
kaggle = "^1.6.6"
tqdm = "^4.66.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
nbstripout = "*"
notebook = "*"
rich = "*"
pre-commit = "*"
jupyterlab = "^4.1.4"

[tool.poetry.group.docs.dependencies]
pydocstyle = {extras = ["toml"], version = "*"}

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = 'black'

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
